--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -13,8 +13,10 @@ _NOTAS:_
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia1.png ||
 || *2.* Dirigirse a la carpeta donde se han descomprimido FAIA y los ejemplos. Manteniendo presionada la tecla _Control_, es posible abrir únicamente el proyecto 'faia' o éste junto con todos los ejemplos. Finalmente presionar la tecla _Open Project_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia2.png ||
-|| *3.* Finalmente, es posible recorrer los distintos paquetes y el código fuente de los proyectos importados.  ||
+|| *3.* Ahora es necesario *cambiar la codificación de caracteres* de _faia_. Hacemos click derecho en el proyecto y elegimos _Properties_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia3.png ||
+|| *4.*  ||
+|| http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia4.png ||
 
 == Configurar un proyecto para que utilice FAIA ==
 
