--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -7,7 +7,8 @@
 
 _NOTAS:_
  * Es importante, antes de continuar, haber leído la sección "Instalar FAIA" de la [http://code.google.com/p/faia/wiki/InstruccionesInstalacion página de instrucciones de instalación].
- * Estas instrucciones de importación de FAIA se aplican para los ejemplos, ya que los pasos son muy similares. Se pone especial énfasis en configurar correctamente la codificación de caracteres de cada proyecto importado, como se indica uno de los pasos, ya que de otro modo surgirán errores.
+ * Estas instrucciones de importación de FAIA se aplican también para los ejemplos, ya que los pasos son muy similares.
+ * Se pone especial énfasis en configurar correctamente la codificación de caracteres de cada proyecto importado o creado, como se indica en uno de los pasos siguientes, ya que de otro modo surgirán errores.
 
 || *1.* Ir al menú _File -> Open Project..._ ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia1.png ||
