--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -41,11 +41,15 @@ _NOTAS:_
 
 == Configurar un proyecto para utilizar _Búsqueda_ ==
 
+TODO: Esta sección no está terminada.
+
 Para comenzar a utilizar estrategias de Búsqueda simplemente se deben especializar las clases que correspondan. Para aprender cómo hacerlo, es bueno observar los ejemplos incluídos.
 
 Vale aclarar aquí una cuestión. Cuando se corre un proyecto que utiliza alguna estrategia de Búsqueda con FAIA, es posible indicarle al framework que genere cierto tipo de salidas sobre la corrida, para poder observar luego el funcionamiento interno del agente, esto es, el árbol de búsqueda.
 
 == Configurar un proyecto para utilizar _Prolog_ ==
+
+TODO: Esta sección no está terminada.
 
 Se debe utilizar como directorio para librerías a 'faia\lib', donde se encuentran algunas dependencias que es necesario referenciar. Para esto:
 
