--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -43,9 +43,21 @@ _NOTAS:_
 
 TODO: Esta sección no está terminada.
 
-Para comenzar a utilizar estrategias de Búsqueda simplemente se deben especializar las clases que correspondan. Para aprender cómo hacerlo, es bueno observar los ejemplos incluídos.
+Para comenzar a utilizar estrategias de Búsqueda simplemente se deben especializar las clases que correspondan, proveídas por el framework FAIA. Para aprender cómo hacerlo, es conveniente observar los ejemplos incluidos.
 
-Vale aclarar aquí una cuestión. Cuando se corre un proyecto que utiliza alguna estrategia de Búsqueda con FAIA, es posible indicarle al framework que genere cierto tipo de salidas sobre la corrida, para poder observar luego el funcionamiento interno del agente, esto es, el árbol de búsqueda.
+Vale aclarar aquí una cuestión. Cuando se corre un proyecto que utiliza alguna estrategia de Búsqueda con FAIA, es posible indicarle al framework que genere cierto tipo de salidas sobre la corrida, para poder observar luego el funcionamiento interno del agente, esto es, el árbol de búsqueda. FAIA provee dos tipos de salidas:
+
+ * Archivos *XML*, que se almacenan en el directorio "searchTrees" dentro de la carpeta del proyecto.
+ * Archivos *PDF*, que muestran de una forma gráfica los árboles generados durante el proceso de búsqueda. Esta opción utiliza LaTeX. En la página de instrucciones de instalación hay una guía para su instalación en Windows y GNU/Linux.
+
+Para configurar el agente y obtener alguna de estas salidas, se puede utilizar el método _setVisibleTree_ de la clase _Search_. En el ejemplo del Pacman esta opción es seteada en el método _selectAction_ de la clase _AgentePacman_:
+
+{{{
+Search busqueda = new Search(estrategiaBusqueda);
+
+// Indica que el árbol de búsqueda debe ser mostrado en formato PDF
+busqueda.setVisibleTree(Search.PDF_TREE);
+}}}
 
 == Configurar un proyecto para utilizar _Prolog_ ==
 
