Edited wiki page through web user interface.

--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -49,7 +49,7 @@ Ver UtilizarBusqueda.
 
 == Configurar un proyecto para utilizar _Prolog_ ==
 
-TODO: Esta sección no está terminada.
+Para utilizar Prolog, es necesario haber instalado SWI-Prolog. En InstruccionesInstalacion se dan detalles de cómo hacerlo.
 
 Se debe utilizar como directorio para librerías a 'faia\lib', donde se encuentran algunas dependencias que es necesario referenciar. Para esto:
 
