--- a/wiki/FaiaConEclipse.wiki
+++ b/wiki/FaiaConEclipse.wiki
@@ -56,4 +56,4 @@ Ver UtilizarBusqueda.
 == Configurar un proyecto para utilizar _Cálculo Situacional_ ==
 
 _NOTAS:_
- * Para utilizar Prolog, es necesario haber instalado SWI-Prolog. En InstruccionesInstalacion se dan detalles de cómo hacerlo.
+ * Para utilizar Cálculo Situacional, es necesario haber instalado SWI-Prolog. En InstruccionesInstalacion se dan detalles de cómo hacerlo, ya que la instalación y configuración no es trivial.
