Edited wiki page through web user interface.

--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -52,12 +52,14 @@ Ver UtilizarBusqueda.
 _NOTAS:_
  * Para utilizar Cálculo Situacional, es necesario haber instalado SWI-Prolog. En InstruccionesInstalacion se dan detalles de cómo hacerlo, ya que la instalación y configuración no es trivial.
 
-|| *1.* Hacemos click derecho sobre _Libraries_ en nuestro proyecto, y elegimos la opción _Add  ||
+|| *1.* Hacemos click derecho sobre _Libraries_ en nuestro proyecto, y elegimos la opción _Add JAR/Folder_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/prolog1.png ||
-|| *2.* ||
+|| *2.* Nos dirigimos al directorio del proyecto _faia_, en la carpeta _lib_, y elegimos el archivo _jpl.jar_. Presionamos _Abrir_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/prolog2.png ||
 
-Con los pasos anteriores ya tenemos agregado el archivo 'jpl.jar' a nuestro classpath. Con esto ya podemos utilizar Prolog en Windows XP (suponiendo que ya ha sido instalado con los pasos dados en esta página, modificando la variable PATH como se indica). *Sin embargo, para sistemas GNU/Linux, es necesario realizar, además, los siguientes pasos:*
+Con los pasos anteriores ya tenemos agregado el archivo 'jpl.jar' a nuestro classpath. Con esto ya podemos utilizar Prolog en Windows XP (suponiendo que ya ha sido instalado con los pasos dados en esta página, modificando la variable PATH como se indica).
+
+*Sin embargo, para sistemas GNU/Linux*, es necesario realizar, _además_, los siguientes pasos:
 
  * Hacer click derecho en el proyecto, y elegir la opción "Properties".
  * En "Run", dentro de la caja de texto "VM Options" colocar: _-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux"_. Es importante no olvidarse de colocar las comillas dobles para indicar la ruta del directorio, y así evitarse problemas.
