--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -57,11 +57,11 @@ _NOTAS:_
 || *2.* Nos dirigimos al directorio del proyecto _faia_, en la carpeta _lib_, y elegimos el archivo _jpl.jar_. Presionamos _Abrir_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/prolog2.png ||
 
-Con los pasos anteriores ya tenemos agregado el archivo 'jpl.jar' a nuestro classpath. Con esto ya podemos utilizar Prolog en Windows XP (suponiendo que ya ha sido instalado con los pasos dados en esta página, modificando la variable PATH como se indica).
+Con los pasos anteriores ya tenemos agregado el archivo 'jpl.jar' a nuestro classpath. Con esto ya podemos utilizar Prolog en Windows (suponiendo que ya ha sido instalado con los pasos dados en la página de instalación, modificando la variable Path de Windows como se indica allí).
 
 *Sin embargo, para sistemas GNU/Linux*, es necesario realizar, _además_, los siguientes pasos:
 
- * Hacer click derecho en el proyecto, y elegir la opción "Properties".
- * En "Run", dentro de la caja de texto "VM Options" colocar: _-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux"_. Es importante no olvidarse de colocar las comillas dobles para indicar la ruta del directorio, y así evitarse problemas.
+ # Hacer click derecho en el proyecto, y elegir la opción _Properties_.
+ # En "Run", dentro de la caja de texto "VM Options" colocar: _-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux"_. Es importante no olvidarse de colocar las comillas dobles para indicar la ruta del directorio, y así evitarse problemas.
 
-Luego de realizar correctamente los pasos anteriores, debería ser posible correr proyectos que utilicen Cálculo Situacional con FAIA. Es recomendable ver los ejemplos incluidos.
+Con estos pasos realizados, debería ser posible poder correr proyectos que utilicen Cálculo Situacional con !NetBeans. Es altamente recomendable ver el ejemplo "pacman_logico".
