--- a/wiki/FaiaConEclipse.wiki
+++ b/wiki/FaiaConEclipse.wiki
@@ -70,4 +70,10 @@ Si se ha instalado SWI-Prolog e importado FAIA correctamente, entonces nuestro p
 
 *En sistemas GNU/Linux*, es necesario realizar, _además_, los siguientes pasos:
 
- # 
+ # Hacer click derecho en nuestro proyecto y elegir la opción _Run As -> Run Configurations_.
+ # En la lista de la izquierda, hacer click derecho en _Java Application_, y elegir la opción _New_.
+ # Se puede colocar algún nombre en el campo _Name_.
+ # Establecer correctamente la clase principal (Main class) haciendo click en el botón _Search_.
+ # En la solapa _Arguments_, en la caja de texto _VM arguments_, colocar: _-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux"_. Es importante no olvidarse de colocar las comillas dobles para indicar la ruta del directorio, y así evitarse problemas.
+ # Presionar el botón _Apply_.
+ # Presionar el botón _Run_ para correr el proyecto.
