Edited wiki page through web user interface.

--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,3 +1,5 @@
 #summary Cosas que se podrían agregar o mejorar.
 
  * La generación de archivos PDF con los árboles de búsqueda se realiza con LaTeX. Se podría utilizar alguna librería hecha en Java para dibujarlos, y así no depender de LaTeX.
+
+ * Ver el tema de que la fila y la columna en los ejemplos tiene que ser consistente.
