--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -15,7 +15,7 @@ _NOTAS:_
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia1.png ||
 || *2.* Dirigirse a la carpeta donde se han descomprimido FAIA y los ejemplos. Manteniendo presionada la tecla _Control_, es posible abrir únicamente el proyecto 'faia' o éste junto con todos los ejemplos. Finalmente presionar la tecla _Open Project_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia2.png ||
-|| *3.* Ahora es necesario *cambiar la codificación de caracteres* de _faia_. Hacemos click derecho en el proyecto y elegimos _Properties_. ||
+|| *3.* Ahora es necesario *cambiar la codificación de caracteres* de _faia_ y los demás proyectos importados. Hacemos click derecho en el proyecto y elegimos _Properties_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia3.png ||
 || *4.* En la sección _Sources_, asegurarse que el campo _Encoding_ tenga seleccionada la opción "UTF-8". Presionar el botón _OK_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia4.png ||
