--- a/wiki/InstruccionesInstalacion.wiki
+++ b/wiki/InstruccionesInstalacion.wiki
@@ -57,9 +57,7 @@ La instalación de MiKTeX en Windows XP es simple como la instalación de cualqu
 
  * Durante la instalación, cuando aparezca la sección de "Settings", asegurarse de que la opción "Install missing packages on-the-fly" esté seteada a "Ask me first". De esta forma MiKTeX preguntará antes de instalar automáticamente algún paquete necesario. *Para el uso en FAIA no es importante esta opción*.
 
- * Luego de que el instalador de MiKTeX haya finalizado, hay que instalar un paquete que por defecto no es incluído en la instalación estándar. El nombre del paquete es "pict2e". Para esto, ir a Inicio -> Programas -> MiKTeX 2.7 -> Browse Packages. Para buscar el paquete que tenemos que instalar, colocar en el campo "Name" el valor "pict2e" (sin las comillas). Elegir del resultado el paquete con ese nombre, hacer click derecho y elegir la opción "Install".
-
- * Finalmente, presionar el botón "Close" cuando la instalación haya terminado.
+ * Luego de que el instalador de MiKTeX haya finalizado, hay que instalar un paquete que por defecto no es incluído en la instalación estándar. El nombre del paquete es "pict2e". Para esto, ir a Inicio -> Programas -> MiKTeX 2.7 -> Browse Packages. Para buscar el paquete que tenemos que instalar, colocar en el campo "Name" el valor "pict2e" (sin las comillas) y presionar el botón "Filter". Elegir del resultado el paquete con ese nombre, hacer click derecho y elegir la opción "Install". El paquete se bajará de Internet y luego será instalado. Finalmente, presionar el botón "Close" cuando la instalación haya terminado.
 
 === En GNU/Linux (Ubuntu) ===
 
