--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,4 +1,6 @@
+#summary preguntas frecuentes
 #labels Featured
+
 = ¿Qué es FAIA?  ¿What is FAIA? =
 FAIA es un framework para el desarrollo de aplicaciones de interés académico que utilizan técnicas de Inteligencia Artificial (IA). El objetivo del mismo es permitir que el alumno pueda enfocarse en modelar y resolver el problema desde el punto de vista de la IA facilitando el proceso de implementación de la aplicación. Para lograr esto FAIA dispone de un conjunto de clases y algoritmos que deben ser utilizados y/o extendidos por el alumno. Se puede encontrar información más detallada en el paper FAIA: Framework para la enseñanza de agentes en IA, que se encuentra en la [http://www.frsf.utn.edu.ar/matero/visitante/index.php?id_catedra=142 página de la cátedra] en la sección "Repositorio".
 
@@ -19,12 +21,18 @@ In the [http://code.google.com/p/faia/w/list wiki] you can find documents that e
 
 
 
-= ¿Hay algún ejemplo disponible que me permita ver cómo utilizar FAIA? =
+= ¿Hay algún ejemplo disponible que me permita ver cómo utilizar FAIA? Are there examples available? =
 Si, hay ejemplos disponibles en los releases en la página de Downloads o accediendo al código disponible en el repositorio Subversion (aunque es recomendable utilizar las versiones estables). Hay ejemplos que demuestran la funcionalidad de FAIA en los enfoques de Búsqueda y Calculo Situacional.
 
 El de '''Búsqueda''' es una versión simplificada del juego "Pacman". El enunciado del ejemplo lo pueden encontrar en la sección "Trabajos prácticos" de la cátedra de [http://www.frsf.utn.edu.ar/matero/visitante/index.php?id_catedra=142&ver=12 Inteligencia Artificial]. Para correr y probar los ejemplos, es necesario seguir una serie de pasos detallados en la wiki. Hay instrucciones tanto para Eclipse como para Netbeans.
 
 El ejemplo de '''Cálculo Situacional''' es el mismo problema que el "Pacman" mencionado en el párrafo anterior, pero utilizando Prolog para resolverlo.
+
+
+Yes. There are examples available in the Downloads page or in the Subversion repository. The examples use search and Situation Calculus strategies.
+
+The example that uses Search, is a more simple Pac-man version. The practical work that explain the problem is available in [http://www.frsf.utn.edu.ar/matero/visitante/index.php?id_catedra=142&ver=12 Inteligencia Artificial]. To execute the examples, follow the steps given in "instalation guide" in the wiki.  
+
 
 
 = ¿Qué contienen los ejemplos? =
